--- a/index.html
+++ b/index.html
@@ -17,30 +17,47 @@
     <title>Super Mario Bros - O Filme</title>
 </head>
 <body>
-    <div class="fundo-video">
+    <!-- <div class="fundo-video">
         <video class="video" autoplay loop muted>
-            <source src="./src/video/video-mario.mp4" type="video/mp4">
-        </video>
+            <source src="./src/video/video-mario1.mp4" type="video/mp4">
+        </video> -->
     </div>
 
     <header class="cabecalho">
+
         <a>
             <img class="logo" src="./src/imagens/logo-chapeu-mario.png" alt="logo chapéu Mario">
         </a>
+
         <nav>
             <ul class="menu">
-                <li>Home</li>
-                <li>Detalhes</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Detalhes</a></li>
             </ul>
         </nav>
+
     </header>
+
     <main class="container">
-        <div class="informacoes">
+        <div class="imagem-titulo">
             <img src="./src/imagens/titulo.png" alt="imagem do título do filme">
-            <p>Mario é um encanador junto com seu irmão Luigi. Um dia, eles vão parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares</p>
+            <p class="descricao" >Mario é um encanador junto com seu irmão Luigi. Um dia, eles foram parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares</p>
             <button class="botao-trailer">Veja o trailer</button>
         </div>
         <img class="mario" src="./src/imagens/super-mario-chars.png">
+
+
+
     </main>
+
+    <footer>
+        <p>© Copyrigth 2023 - Desenvolvido por <a id="nome" href="https://github.com/robertojunnior/">Roberto Junior</a> durante semana Dev em Dobro.</p>
+    </footer>
+
+
 </body>
+
+
+
+
 </html>
