--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <title>Super Mario Bros - O Filme</title>
 </head>
 <body>
-    <!-- <div class="fundo-video">
+    <div class="fundo-video">
         <video class="video" autoplay loop muted>
             <source src="./src/video/video-mario1.mp4" type="video/mp4">
-        </video> -->
+        </video>
     </div>
 
     <header class="cabecalho">
@@ -39,11 +39,12 @@
     </header>
 
     <main class="container">
-        <div class="imagem-titulo">
-            <img src="./src/imagens/titulo.png" alt="imagem do título do filme">
-            <p class="descricao" >Mario é um encanador junto com seu irmão Luigi. Um dia, eles foram parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares</p>
+        <div>
+            <img class="imagem-titulo" src="./src/imagens/titulo.png" alt="imagem do título do filme">
+            <p class="descricao" >Mario é um encanador junto com seu irmão Luigi. <br> Um dia, eles foram parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares</p>
             <button class="botao-trailer">Veja o trailer</button>
         </div>
+        
         <img class="mario" src="./src/imagens/super-mario-chars.png">
 
 
@@ -51,7 +52,7 @@
     </main>
 
     <footer>
-        <p>© Copyrigth 2023 - Desenvolvido por <a id="nome" href="https://github.com/robertojunnior/">Roberto Junior</a> durante semana Dev em Dobro.</p>
+        <p>© Copyrigth 2023 - Desenvolvido por <a id="nome" target="_blank" href="https://github.com/robertojunnior/">Roberto Junior</a> durante semana Dev em Dobro.</p>
     </footer>
 
 
