--- a/index.html
+++ b/index.html
@@ -39,13 +39,21 @@
     </header>
 
     <main class="container">
+        <div class="modal">
+            <span class="conteudo-modal"></span>
+            <!-- <iframe id="video-popup" width="560" height="315" src="https://youtu.be/wkn-Gb-Fhac" title="Trailer Oficial"  frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+            <!-- <iframe id="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/wkn-Gb-Fhac" title="Trailer-oficial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+
+            
+        </div>
+
         <div>
             <img class="imagem-titulo" src="./src/imagens/titulo.png" alt="imagem do título do filme">
-            <p class="descricao" >Mario é um encanador junto com seu irmão Luigi. <br> Um dia, eles foram parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares</p>
+            <p class="descricao" >Mario é um encanador junto com seu irmão Luigi. <br> Um dia, eles foram parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
             <button class="botao-trailer">Veja o trailer</button>
         </div>
         
-        <img class="mario" src="./src/imagens/super-mario-chars.png">
+        <img class="imagem-mario" src="./src/imagens/super-mario-chars.png">
 
 
 
