--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 
     <main class="container">
         <div class="modal">
-            <span class="conteudo-modal"></span>
-            <!-- <iframe id="video-popup" width="560" height="315" src="https://youtu.be/wkn-Gb-Fhac" title="Trailer Oficial"  frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-            <iframe id="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/wkn-Gb-Fhac" title="Trailer-oficial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="conteudo-modal">
+                <span class="fechar-modal">X</span>
+                <!-- <iframe id="video-popup" width="560" height="315" src="https://youtu.be/wkn-Gb-Fhac" title="Trailer Oficial"  frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                <iframe id="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/wkn-Gb-Fhac" title="Trailer-oficial" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen" allowfullscreen></iframe>
+            </div>
 
             
         </div>
