--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
 
     <footer>
-        <p>© Copyrigth 2023 - Desenvolvido por <a id="nome" target="_blank" href="https://github.com/robertojunnior/">Roberto Junior</a> durante semana Dev em Dobro.</p>
+        <p>© Copyrigth 2023 - Desenvolvido por <a id="nome" target="_blank" href="https://github.com/robertojunnior/">RoberJunnior</a> durante semana Dev em Dobro.</p>
     </footer>
 
 
