--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="fundo-video">
         <video class="video" autoplay loop muted>
-            <source src="./src/video/video-mario1.mp4" type="video/mp4">
+            <source src="./src/video/video-mario.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -37,12 +37,12 @@
     </header>
 
     <main class="container">
-        <div class="modal">
+        <!-- <div class="modal">
             <div class="conteudo-modal">
                 <span class="fechar-modal">X</span>
                 <iframe id="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/wkn-Gb-Fhac" title="Trailer-oficial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen" allowfullscreen></iframe>
             </div>
-        </div>
+        </div> -->
 
         <div>
             <img class="imagem-titulo" src="./src/imagens/titulo.png" alt="imagem do título do filme">
@@ -57,7 +57,7 @@
     </main>
 
     <footer>
-        <p>© Copyrigth 2023 - Desenvolvido por <a id="nome" target="_blank" href="https://github.com/robertojunnior/">RoberJunnior</a> durante semana Dev em Dobro.</p>
+        <p>© 2023 - Desenvolvido por <a id="nome" target="_blank" href="https://github.com/robertojunnior/">RoberJunnior</a> durante semana Dev em Dobro.</p>
     </footer>
 
 
