--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     </header>
 
     <main class="container">
-        <!-- <div class="modal">
+        <div class="modal">
             <div class="conteudo-modal">
                 <span class="fechar-modal">X</span>
                 <iframe id="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/wkn-Gb-Fhac" title="Trailer-oficial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen" allowfullscreen></iframe>
             </div>
-        </div> -->
+        </div>
 
         <div>
             <img class="imagem-titulo" src="./src/imagens/titulo.png" alt="imagem do título do filme">
