--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
-    <link rel="stylesheet" href="responsivo.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
+    
 
     <title>Super Mario Bros - O Filme</title>
 </head>
