--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="informacoes">
             <img class="imagem-titulo" src="./src/imagens/titulo.png" alt="imagem do título do filme">
-            <p class="descricao" >Mario é um encanador junto com seu irmão Luigi. <br> Um dia, eles foram parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
+            <p class="descricao" >Mario é um encanador junto com seu irmão Luigi. Um dia, eles foram parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
             <button class="botao-trailer">Veja o trailer</button>
         </div>
         
