--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="modal">
             <div class="conteudo-modal">
                 <span class="fechar-modal">X</span>
-                <iframe id="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/wkn-Gb-Fhac" title="Trailer-oficial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen" allowfullscreen></iframe>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/wkn-Gb-Fhac" title="Trailer-oficial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen" allowfullscreen></iframe>
             </div>
         </div>
 
